fix: #15 게시글 조회시 미디어 포함 조회로 변경